--- a/AdvancedForms/Views/_ViewImports.cshtml
+++ b/AdvancedForms/Views/_ViewImports.cshtml
@@ -3,7 +3,7 @@
 
 *@
 
-@*@inherits OrchardCore.DisplayManagement.Razor.RazorPage<TModel>*@
+@inherits OrchardCore.DisplayManagement.Razor.RazorPage<TModel>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@*@addTagHelper *, OrchardCore.DisplayManagement*@
+@addTagHelper *, OrchardCore.DisplayManagement
 @addTagHelper *, OrchardCore.ResourceManagement
