--- a/AdvancedForms/Views/AdvancedForms/Print.cshtml
+++ b/AdvancedForms/Views/AdvancedForms/Print.cshtml
@@ -1,11 +1,13 @@
 ﻿@model AdvancedForms.ViewModels.AdvancedFormViewModel
 
 @{
-  Layout = null;
+    Layout = null;
 }
 
-<style src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></style>
-<style src="/AdvancedForms/Styles/formio.full.min.css"></style>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="/AdvancedForms/Styles/formio.full.min.css">
 <script src="/AdvancedForms/Scripts/formio.full.min.js"></script>
 
 <style>
@@ -15,7 +17,6 @@
 
     .button {
         position: absolute;
-        top: 2%;
     }
 </style>
 
@@ -44,7 +45,7 @@
 </script>
 
 <div class="wrapper">
-    <input type="button" id="printButton" value="Print" onclick="screenPrint();" />  
+    <button id="printButton" style="font-size:24px" onclick="screenPrint();">Print&nbsp;<i class="fa fa-print"></i></button>    
 </div>
 
 <h1>@Model.Title</h1>
